Fixed overflow bug on buttons on chrome

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 html, body{
+    position:fixed;
     height: 100%;
     width: 100%;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     border: 0;
+
     overflow: hidden;
 
     background: lightgray;
